# tauri-cti-task-manager

./: .env  .gitignore  README.md  app-launcher-advanced.html  app-launcher.html  bar-menu.html  bar.html  components.json  counselor-dashboard.html  download-server.html  download-server.py  latest.json  launcher.html  login.html  package-lock.json  package.json  panel.html  settings.html  start-download-server.bat  tailwind.config.js  test22.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.tauri/: tauri.key
backup/: test.html  vite.config copy.ts
public/: settings.html
src/: App.css  App.tsx  entry.ts  main.css  main.tsx  route.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.plugins.json
src-tauri/capabilities/: default.json
src-tauri/src/: deeplink.rs  devtools.rs  events.rs  lib.rs  main.rs  redis.rs  windows.rs
src-tauri/src/commands/: context_menu.rs  mod.rs  notifications.rs  panel.rs  statistics.rs  window_title_command.rs
src/app/bar-mode/: index.tsx
src/app/launcher/: index.tsx
src/app/panel-mode/: index.ts  index.tsx
src/components/: Titlebar.css  Titlebar.tsx
src/config/: windowConfig.ts
src/hooks/: useAgentCurrentStatus.ts  useAutoUpdate.ts  useRedisEvents.ts
src/lib/: api.ts  redis-events.ts
src/pages/: Launcher.tsx  MainWindowWithBarMode.tsx  MainWindowWithPanelMode.tsx  hello.tsx  settings.tsx
src/pages/BarMode/: index.tsx
src/routes/: hello.tsx
test-page/: test-for-deeplink.html
~/.tauri/: cti-task-manager.key  cti-task-manager.key.pub  myapp.key  myapp.key.pub  tauri.key  ucti.key  ucti.key.pub
(+142 files in other folders)
