# ===== 해결책 1: Cargo.toml에서 devtools 다시 추가 (권장) =====

[package]
name = "cti-task-manager-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "cti_task_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ✅ devtools 기능 다시 추가 (개발 시 필요)
tauri = { version = "2", features = ["devtools"] }  # ✅ 이것만 수정
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-fs = "2.3.0"
url = "2.5.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-deep-link = "2"
uuid = { version = "1.0", features = ["v4"] }
muda = "0.11"  # 최신 버전 확인
redis = { version = "0.24", features = ["tokio-comp"] }
futures-util = "0.3"


# ✅ 워닝 무시
[lints.rust]
unused_variables = "allow"
unused_imports = "allow"
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
large_enum_variant = "allow"
